--- a/config/entities/lights/light_groups.yaml
+++ b/config/entities/lights/light_groups.yaml
@@ -1,20 +1,11 @@
 ---
 - platform: group
-  name: Backyard Group
+  name: Tuin Led Groep
   entities:
-    - light.barn_led
-    - light.barn_light
-    - light.small_barn
-    - light.flood_light
-    - light.patio
-    - light.garden
-- platform: group
-  name: Garden
-  entities:
-    - light.garden_led_1
-    - light.garden_led_2
-    - light.garden_led_3
-    - light.garden_led_4
+    - light.tuin_led_1
+    - light.tuin_led_2
+    - light.tuin_led_3
+    - light.tuin_led_4
 - platform: group
   name: Patio
   entities:
@@ -25,12 +16,20 @@
     - light.patio_led_5
     - light.patio_led_6
 - platform: group
-  name: Livingroom Spots Group
+  name: Woonkamer Spotjes
   entities:
-    - light.livingroom_spots_1
-    - light.livingroom_spots_2
+    - light.woonkamer_spotjes_1
+    - light.woonkamer_spotjes_2
 - platform: group
-  name: Attic
+  name: Zolder
   entities:
-    - light.attic_light_1
-    - light.attic_light_2
+    - light.zolder_licht_1
+    - light.zolder_licht_2
+- platform: group
+  name: Tuin
+  entities:
+    - light.patio
+    - light.tuin_led_groep
+    - light.schuur_licht
+    - light.licht_kleine_schuur
+    - light.groot_licht
