--- a/config/entities/groups/all_doors.yaml
+++ b/config/entities/groups/all_doors.yaml
@@ -1,6 +1,6 @@
 ---
-all_doors:
-  name: All Doors
+alle_deuren:
+  name: Alle Deuren
   entities:
-    - binary_sensor.door_sensor_front
-    - binary_sensor.door_sensor_back
+    - binary_sensor.voordeur
+    - binary_sensor.achterdeur
