--- a/config/esphome/barn_outlet.yaml
+++ b/config/esphome/barn_outlet.yaml
@@ -1,7 +1,7 @@
 ---
 substitutions:
   devicename: barn_outlet
-  upper_devicename: Barn Outlet
+  upper_devicename: Schuur Stopcontact
 
 esphome:
   name: $devicename
