--- a/config/esphome/toilet_light.yaml
+++ b/config/esphome/toilet_light.yaml
@@ -1,7 +1,7 @@
 ---
 substitutions:
   devicename: toilet_light
-  upper_devicename: Toilet Light
+  upper_devicename: Toilet Licht
 
 esphome:
   name: $devicename
