--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -131,7 +131,7 @@
     path: homeassistant/motion_light.yaml
     input:
       motion_entity: binary_sensor.wc_beweging
-      no_motion_wait: 180
+      no_motion_wait: 300
       light_target:
         device_id: 9715ed7474a0b3fbcc329c8809305062
 - id: '1615019766980'
@@ -443,23 +443,21 @@
   - choose:
     - conditions:
       - condition: state
-        entity_id: light.tuin_groep
+        entity_id: light.tuin
         state: 'on'
       sequence:
       - service: light.turn_off
         target:
-          entity_id:
-          - light.tuin_groep
+          entity_id: light.tuin
     - conditions:
       - condition: state
-        entity_id: light.tuin_groep
         state: 'off'
+        entity_id: light.tuin
       sequence:
       - service: light.turn_on
         data: {}
         target:
-          entity_id:
-          - light.tuin_groep
+          entity_id: light.tuin
     default: []
   mode: single
 - id: '1615106577599'
@@ -615,12 +613,14 @@
   - service: light.turn_on
     data: {}
     target:
-      entity_id:
-      - light.kitchen_spots
-      - light.livingroom_spots_group
+      entity_id: light.woonkamer_spotjes
   - type: turn_on
     device_id: ff5c0840f9c86a1f48604b60606f7a3c
-    entity_id: switch.closet_outlet
+    entity_id: switch.kast
+    domain: switch
+  - type: turn_on
+    device_id: d2c7a7ba8860ff8c0107ee70a6f71453
+    entity_id: switch.keuken_schakelaar
     domain: switch
   mode: single
 - id: '1615120691892'
@@ -657,3 +657,4 @@
       boolean: input_boolean.house_occupied
       min_temp: 18
       set_temp: 22
+      time_after: '7:30:00'
