--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -5,30 +5,32 @@
   - type: opened
     platform: device
     device_id: 2369c98ff6769132c689fde9d033f0c2
-    entity_id: binary_sensor.master_bedroom_sensor
+    entity_id: binary_sensor.slaapkamer_raam
     domain: binary_sensor
   - type: opened
     platform: device
     device_id: ed766a1c6af0c28a6fd0ba649fa29a90
-    entity_id: binary_sensor.girls_room_raam_sensor
+    entity_id: binary_sensor.slaapkamer_raam_elyza
     domain: binary_sensor
   - type: opened
     platform: device
     device_id: 58240f343c47a1ec8eb90fcc65912446
-    entity_id: binary_sensor.boys_room_raam_sensor
+    entity_id: binary_sensor.slaapkamer_raam_santi
     domain: binary_sensor
   - type: opened
     platform: device
     device_id: 90be3e2be0dc0b2721fd3fc479128b36
-    entity_id: binary_sensor.bathroom_raam_sensor_badkamer
+    entity_id: binary_sensor.badkamer_raam
     domain: binary_sensor
-  - platform: state
-    entity_id: binary_sensor.achterdeur
-    to: 'on'
   - type: opened
     platform: device
     device_id: 53d44eb3c2e1289e5e52183d88854c7c
-    entity_id: binary_sensor.voordeur
+    entity_id: binary_sensor.voor_deur
+    domain: binary_sensor
+  - type: opened
+    platform: device
+    device_id: 3eb0d8d36bc313cf82d9ddb3343e5b04
+    entity_id: binary_sensor.achter_deur
     domain: binary_sensor
   condition:
   - condition: state
@@ -47,7 +49,10 @@
   - platform: state
     entity_id: input_boolean.house_occupied
     to: 'off'
-  condition: []
+  condition:
+  - condition: state
+    entity_id: group.alle_ramen
+    state: 'on'
   action:
   - service: notify.mobile_app_in2023
     data:
@@ -77,14 +82,14 @@
         domain: binary_sensor
       sequence:
       - type: turn_on
-        device_id: b440e812f8c2846d23d0023d534a1605
-        entity_id: light.kelder_licht
+        device_id: 258ef93cfe7ec7e16b12ebef3794d871
+        entity_id: light.kelder
         domain: light
         brightness_pct: 100
     default:
     - type: turn_off
-      device_id: b440e812f8c2846d23d0023d534a1605
-      entity_id: light.kelder_licht
+      device_id: 258ef93cfe7ec7e16b12ebef3794d871
+      entity_id: light.kelder
       domain: light
   mode: single
 - id: '1614888738245'
@@ -130,10 +135,10 @@
   use_blueprint:
     path: homeassistant/motion_light.yaml
     input:
-      motion_entity: binary_sensor.wc_beweging
       no_motion_wait: 300
       light_target:
         device_id: 9715ed7474a0b3fbcc329c8809305062
+      motion_entity: binary_sensor.wc_beweging
 - id: '1615019766980'
   alias: Verwarming Aan
   description: ''
@@ -181,41 +186,31 @@
   description: ''
   trigger:
   - platform: state
-    entity_id: binary_sensor.achterdeur
+    entity_id: binary_sensor.achter_deur
+    to: 'on'
   condition:
   - condition: state
     entity_id: sun.sun
     state: below_horizon
   action:
-  - choose:
-    - conditions:
-      - type: is_open
-        condition: device
-        device_id: 3eb0d8d36bc313cf82d9ddb3343e5b04
-        entity_id: binary_sensor.achterdeur
-        domain: binary_sensor
-      sequence:
-      - service: light.turn_on
-        data:
-          brightness_pct: 100
-        target:
-          device_id:
-          - 0bec4d9ccbbd5f8801e0ea8596b45ad3
-          - 7e4c77efbf8615fb3788fd12de7ab771
-    - conditions:
-      - type: is_not_open
-        condition: device
-        device_id: 3eb0d8d36bc313cf82d9ddb3343e5b04
-        entity_id: binary_sensor.achterdeur
-        domain: binary_sensor
-      sequence:
-      - service: light.turn_off
-        target:
-          device_id:
-          - 0bec4d9ccbbd5f8801e0ea8596b45ad3
-          - 7e4c77efbf8615fb3788fd12de7ab771
-    default: []
-  mode: single
+  - service: light.turn_on
+    data:
+      brightness_pct: 100
+    target:
+      device_id:
+      - 0bec4d9ccbbd5f8801e0ea8596b45ad3
+      - 7e4c77efbf8615fb3788fd12de7ab771
+  - delay:
+      hours: 0
+      minutes: 1
+      seconds: 30
+      milliseconds: 0
+  - service: light.turn_off
+    target:
+      device_id:
+      - 0bec4d9ccbbd5f8801e0ea8596b45ad3
+      - 7e4c77efbf8615fb3788fd12de7ab771
+  mode: restart
 - id: '1615022309251'
   alias: Huis Status - Bewoond
   description: ''
@@ -266,7 +261,8 @@
     data:
       brightness_pct: 100
     target:
-      entity_id: light.gang_licht
+      device_id:
+      - 4fccfa91dad31833cbbc3428b31c9b76
   - delay:
       hours: 0
       minutes: 5
@@ -274,7 +270,8 @@
       milliseconds: 0
   - service: light.turn_off
     target:
-      entity_id: light.gang_licht
+      device_id:
+      - 4fccfa91dad31833cbbc3428b31c9b76
   mode: single
 - id: '1615024627811'
   alias: Verlichting - Thuis Komen
@@ -291,17 +288,14 @@
     entity_id: sun.sun
     state: below_horizon
   action:
-  - service: light.turn_on
-    data: {}
+  - service: homeassistant.turn_on
     target:
       entity_id:
       - light.woonkamer_spotjes
-  - service: switch.turn_on
-    target:
-      device_id: ff5c0840f9c86a1f48604b60606f7a3c
+      - switch.kast
   - type: turn_on
-    device_id: b18640df2e68c49006d9e16a72495f95
-    entity_id: light.gang_licht
+    device_id: 4fccfa91dad31833cbbc3428b31c9b76
+    entity_id: light.gang
     domain: light
     brightness_pct: 100
   - delay:
@@ -310,8 +304,8 @@
       seconds: 0
       milliseconds: 0
   - type: turn_off
-    device_id: b18640df2e68c49006d9e16a72495f95
-    entity_id: light.gang_licht
+    device_id: 4fccfa91dad31833cbbc3428b31c9b76
+    entity_id: light.gang
     domain: light
   mode: single
 - id: '1615037777771'
@@ -425,8 +419,8 @@
     domain: switch
   - type: turn_on
     device_id: d2c7a7ba8860ff8c0107ee70a6f71453
-    entity_id: switch.keuken_schakelaar
-    domain: switch
+    entity_id: light.keuken_spotjes
+    domain: light
   mode: single
 - id: '1615106134848'
   alias: Keuken - Schakelaar Lang Drukken
@@ -451,8 +445,8 @@
           entity_id: light.tuin
     - conditions:
       - condition: state
-        state: 'off'
         entity_id: light.tuin
+        state: 'off'
       sequence:
       - service: light.turn_on
         data: {}
@@ -475,27 +469,27 @@
   - choose:
     - conditions:
       - condition: device
-        type: is_off
-        device_id: ff5ec2b2fd4791a7e74389d08578b824
-        entity_id: light.keuken_licht
-        domain: light
-      sequence:
-      - type: turn_on
-        device_id: ff5ec2b2fd4791a7e74389d08578b824
-        entity_id: light.keuken_licht
-        domain: light
-        brightness_pct: 100
-    - conditions:
-      - condition: device
         type: is_on
         device_id: ff5ec2b2fd4791a7e74389d08578b824
-        entity_id: light.keuken_licht
+        entity_id: light.keuken
         domain: light
       sequence:
       - type: turn_off
         device_id: ff5ec2b2fd4791a7e74389d08578b824
-        entity_id: light.keuken_licht
+        entity_id: light.keuken
         domain: light
+    - conditions:
+      - condition: device
+        type: is_off
+        device_id: ff5ec2b2fd4791a7e74389d08578b824
+        entity_id: light.keuken
+        domain: light
+      sequence:
+      - type: turn_on
+        device_id: ff5ec2b2fd4791a7e74389d08578b824
+        entity_id: light.keuken
+        domain: light
+        brightness_pct: 100
     default: []
   mode: single
 - id: '1615106757926'
@@ -599,7 +593,7 @@
   - type: illuminance
     platform: device
     device_id: 9b78ba0ed3b179d6118bf651e2371fba
-    entity_id: sensor.lux
+    entity_id: sensor.licht_sensor
     domain: sensor
     below: 6
   condition:
@@ -620,8 +614,8 @@
     domain: switch
   - type: turn_on
     device_id: d2c7a7ba8860ff8c0107ee70a6f71453
-    entity_id: switch.keuken_schakelaar
-    domain: switch
+    entity_id: light.keuken_spotjes
+    domain: light
   mode: single
 - id: '1615120691892'
   alias: Gasten Status Uit
@@ -653,8 +647,29 @@
     input:
       time_before: '21:30:00'
       heating: climate.woonkamer
-      temp_sensor: sensor.multi_downstairs_temp
       boolean: input_boolean.house_occupied
       min_temp: 18
-      set_temp: 22
+      set_temp: 20
       time_after: '7:30:00'
+      temp_sensor: sensor.multi_sensor_beneden_temperature
+- id: '1615837816840'
+  alias: Verlichting - Toilet Controle
+  description: ''
+  trigger:
+  - platform: device
+    type: turned_on
+    device_id: 9715ed7474a0b3fbcc329c8809305062
+    entity_id: light.toilet_licht
+    domain: light
+    for:
+      hours: 0
+      minutes: 10
+      seconds: 0
+      milliseconds: 0
+  condition: []
+  action:
+  - type: turn_off
+    device_id: 9715ed7474a0b3fbcc329c8809305062
+    entity_id: light.toilet_licht
+    domain: light
+  mode: single
