--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -255,7 +255,10 @@
   - platform: state
     entity_id: binary_sensor.frontdoor_ding
     to: 'on'
-  condition: []
+  condition:
+  - condition: state
+    entity_id: sun.sun
+    state: below_horizon
   action:
   - service: light.turn_on
     data:
@@ -373,7 +376,7 @@
         entity_id: switch.wled_santi_nightlight
         domain: switch
     default: []
-  mode: single
+  mode: restart
 - id: '1615054604869'
   alias: Huis Status - Onbewoond
   description: ''
@@ -651,7 +654,7 @@
       min_temp: 18
       set_temp: 20
       time_after: '7:30:00'
-      temp_sensor: sensor.multi_sensor_beneden_temperature
+      temp_sensor: sensor.multi_sensor_beneden_temperatuur
 - id: '1615837816840'
   alias: Verlichting - Toilet Controle
   description: ''
@@ -672,4 +675,124 @@
     device_id: 9715ed7474a0b3fbcc329c8809305062
     entity_id: light.toilet_licht
     domain: light
+  mode: single
+- id: '1616345413694'
+  alias: Tag - Gang Is Gescand
+  description: ''
+  trigger:
+  - platform: tag
+    tag_id: 1bc10a38-e33d-4138-9e27-5ab2c5fff440
+  condition: []
+  action:
+  - service: homeassistant.turn_on
+    target:
+      entity_id:
+      - switch.kast
+      - light.woonkamer_spotjes
+      - light.keuken_spotjes
+  mode: single
+- id: '1616350209599'
+  alias: Meldingen - Laag Batterij Niveau
+  description: ''
+  use_blueprint:
+    path: sbyx/low-battery-level-detection-notification-for-all-battery-sensors.yaml
+    input:
+      time: '10:00:00'
+      day: 6
+      exclude:
+        entity_id:
+        - sensor.in2023_batterijniveau
+        - sensor.iphone_van_marietje_battery_level
+      actions:
+      - service: notify.mobile_app_in2023
+        data:
+          title: HA Event
+          message: 'Laag batterij niveau voor: {{sensors}}'
+- id: '1616440295091'
+  alias: Verlichting - Voordeur Open Licht Aan
+  description: ''
+  trigger:
+  - type: opened
+    platform: device
+    device_id: 53d44eb3c2e1289e5e52183d88854c7c
+    entity_id: binary_sensor.voor_deur
+    domain: binary_sensor
+  condition:
+  - condition: or
+    conditions:
+    - type: is_illuminance
+      condition: device
+      device_id: 9b78ba0ed3b179d6118bf651e2371fba
+      entity_id: sensor.licht_sensor
+      domain: sensor
+      below: 6
+    - condition: state
+      entity_id: sun.sun
+      state: below_horizon
+  - condition: time
+    after: '17:00'
+    before: 03:00
+  action:
+  - type: turn_on
+    device_id: ff5c0840f9c86a1f48604b60606f7a3c
+    entity_id: switch.kast
+    domain: switch
+  - service: homeassistant.turn_on
+    target:
+      entity_id:
+      - light.woonkamer_spotjes
+      - light.keuken_spotjes
+      - light.gang
+  - delay:
+      hours: 0
+      minutes: 5
+      seconds: 0
+      milliseconds: 0
+  - type: turn_off
+    device_id: 4fccfa91dad31833cbbc3428b31c9b76
+    entity_id: light.gang
+    domain: light
+  mode: single
+- id: '1616701294801'
+  alias: Rolluik Bediening
+  description: ''
+  trigger:
+  - platform: state
+    entity_id: input_select.rolluik
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: input_select.rolluik
+        state: Stop
+      sequence:
+      - service: switch.turn_off
+        target:
+          entity_id:
+          - switch.rolluik_dicht
+          - switch.rolluik_open
+    - conditions:
+      - condition: state
+        entity_id: input_select.rolluik
+        state: Dicht
+      sequence:
+      - service: switch.turn_off
+        target:
+          entity_id: switch.rolluik_open
+      - service: switch.turn_on
+        target:
+          entity_id: switch.rolluik_dicht
+    - conditions:
+      - condition: state
+        entity_id: input_select.rolluik
+        state: Open
+      sequence:
+      - service: switch.turn_off
+        target:
+          entity_id: switch.rolluik_dicht
+      - service: switch.turn_on
+        target:
+          entity_id: switch.rolluik_open
+    default: []
   mode: single
