--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -422,110 +422,8 @@
     domain: switch
   - type: turn_on
     device_id: d2c7a7ba8860ff8c0107ee70a6f71453
-    entity_id: light.keuken_spotjes
-    domain: light
-  mode: single
-- id: '1615106134848'
-  alias: Keuken - Schakelaar Lang Drukken
-  description: ''
-  trigger:
-  - platform: device
-    domain: tasmota
-    device_id: d2c7a7ba8860ff8c0107ee70a6f71453
-    type: button_long_press
-    subtype: button_1
-    discovery_id: D8F15BE77D0A_button_1_HOLD
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: light.tuin
-        state: 'on'
-      sequence:
-      - service: light.turn_off
-        target:
-          entity_id: light.tuin
-    - conditions:
-      - condition: state
-        entity_id: light.tuin
-        state: 'off'
-      sequence:
-      - service: light.turn_on
-        data: {}
-        target:
-          entity_id: light.tuin
-    default: []
-  mode: single
-- id: '1615106577599'
-  alias: 'Keuken - Schakelaar 4x Drukken '
-  description: ''
-  trigger:
-  - platform: device
-    domain: tasmota
-    device_id: d2c7a7ba8860ff8c0107ee70a6f71453
-    type: button_quadruple_press
-    subtype: button_1
-    discovery_id: D8F15BE77D0A_button_1_QUAD
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: device
-        type: is_on
-        device_id: ff5ec2b2fd4791a7e74389d08578b824
-        entity_id: light.keuken
-        domain: light
-      sequence:
-      - type: turn_off
-        device_id: ff5ec2b2fd4791a7e74389d08578b824
-        entity_id: light.keuken
-        domain: light
-    - conditions:
-      - condition: device
-        type: is_off
-        device_id: ff5ec2b2fd4791a7e74389d08578b824
-        entity_id: light.keuken
-        domain: light
-      sequence:
-      - type: turn_on
-        device_id: ff5ec2b2fd4791a7e74389d08578b824
-        entity_id: light.keuken
-        domain: light
-        brightness_pct: 100
-    default: []
-  mode: single
-- id: '1615106757926'
-  alias: Keuken - Schakelaar 2x Drukken
-  description: ''
-  trigger:
-  - platform: device
-    domain: tasmota
-    device_id: d2c7a7ba8860ff8c0107ee70a6f71453
-    type: button_double_press
-    subtype: button_1
-    discovery_id: D8F15BE77D0A_button_1_DOUBLE
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: light.patio
-        state: 'on'
-      sequence:
-      - service: light.turn_off
-        target:
-          entity_id: light.patio
-    - conditions:
-      - condition: state
-        entity_id: light.patio
-        state: 'off'
-      sequence:
-      - service: light.turn_on
-        data: {}
-        target:
-          entity_id: light.patio
-    default: []
+    entity_id: switch.keuken_schakelaar_relay
+    domain: switch
   mode: single
 - id: '1615107077638'
   alias: Slaapkamer Santi - Schakelaar 2x Drukken
@@ -617,8 +515,8 @@
     domain: switch
   - type: turn_on
     device_id: d2c7a7ba8860ff8c0107ee70a6f71453
-    entity_id: light.keuken_spotjes
-    domain: light
+    entity_id: switch.keuken_schakelaar_relay
+    domain: switch
   mode: single
 - id: '1615120691892'
   alias: Gasten Status Uit
@@ -741,8 +639,8 @@
     target:
       entity_id:
       - light.woonkamer_spotjes
-      - light.keuken_spotjes
       - light.gang
+      - switch.keuken_schakelaar_relay
   - delay:
       hours: 0
       minutes: 5
@@ -752,47 +650,4 @@
     device_id: 4fccfa91dad31833cbbc3428b31c9b76
     entity_id: light.gang
     domain: light
-  mode: single
-- id: '1616701294801'
-  alias: Rolluik Bediening
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: input_select.rolluik
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: state
-        entity_id: input_select.rolluik
-        state: Stop
-      sequence:
-      - service: switch.turn_off
-        target:
-          entity_id:
-          - switch.rolluik_dicht
-          - switch.rolluik_open
-    - conditions:
-      - condition: state
-        entity_id: input_select.rolluik
-        state: Dicht
-      sequence:
-      - service: switch.turn_off
-        target:
-          entity_id: switch.rolluik_open
-      - service: switch.turn_on
-        target:
-          entity_id: switch.rolluik_dicht
-    - conditions:
-      - condition: state
-        entity_id: input_select.rolluik
-        state: Open
-      sequence:
-      - service: switch.turn_off
-        target:
-          entity_id: switch.rolluik_dicht
-      - service: switch.turn_on
-        target:
-          entity_id: switch.rolluik_open
-    default: []
   mode: single
