--- a/config/automations.yaml
+++ b/config/automations.yaml
@@ -402,12 +402,12 @@
   - choose:
     - conditions:
       - condition: state
-        entity_id: group.all_lights
+        entity_id: group.alle_lichten
         state: 'on'
       sequence:
       - service: homeassistant.turn_off
         target:
-          entity_id: group.all_lights
+          entity_id: group.alle_lichten
       - service: notify.mobile_app_in2023
         data:
           message: Niemand Thuis, Alle Lichten Uitgezet!
@@ -452,16 +452,7 @@
   - platform: state
     entity_id: device_tracker.gwendolyn
     to: not_home
-  - platform: state
-    entity_id: device_tracker.carla
-    to: not_home
-  condition:
-  - condition: state
-    entity_id: device_tracker.gwendolyn
-    state: not_home
-  - condition: state
-    entity_id: device_tracker.carla
-    state: not_home
+  condition: []
   action:
   - service: input_boolean.turn_off
     target:
@@ -477,7 +468,7 @@
       heating: climate.woonkamer
       boolean: input_boolean.house_occupied
       min_temp: 18
-      set_temp: 20
+      set_temp: 25
       time_after: '7:30:00'
       temp_sensor: sensor.multi_sensor_beneden_temperatuur
 - id: '1615837816840'
@@ -578,58 +569,3 @@
     entity_id: light.gang
     domain: light
   mode: single
-- id: '1617606747056'
-  alias: Verlichting - Nachtlamp
-  description: ''
-  trigger:
-  - platform: state
-    entity_id: light.wled_elyza
-  - platform: state
-    entity_id: light.wled_santi
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: device
-        type: is_on
-        device_id: d5ee29d7beb5899f6d65ceaf95dbdd76
-        entity_id: light.wled_elyza
-        domain: light
-        for:
-          hours: 0
-          minutes: 0
-          seconds: 0
-          milliseconds: 0
-      sequence:
-      - delay:
-          hours: 0
-          minutes: 30
-          seconds: 0
-          milliseconds: 0
-      - type: turn_off
-        device_id: d5ee29d7beb5899f6d65ceaf95dbdd76
-        entity_id: light.wled_elyza
-        domain: light
-    - conditions:
-      - condition: device
-        type: is_on
-        device_id: b65dbb8a196ab5a4401b6c27bc17094f
-        entity_id: light.wled_santi
-        domain: light
-        for:
-          hours: 0
-          minutes: 0
-          seconds: 0
-          milliseconds: 0
-      sequence:
-      - delay:
-          hours: 0
-          minutes: 30
-          seconds: 0
-          milliseconds: 0
-      - type: turn_off
-        device_id: b65dbb8a196ab5a4401b6c27bc17094f
-        entity_id: light.wled_santi
-        domain: light
-    default: []
-  mode: restart
