🔥 edited heating blueprint

--- a/config/blueprints/automation/r3mcos3/heating.yaml
+++ b/config/blueprints/automation/r3mcos3/heating.yaml
@@ -73,6 +73,9 @@ trigger:
     at: !input 'time_before'
   - platform: state
     entity_id: !input boolean
+  - platform: numeric_state
+    entity_id: !input temp_sensor
+    below: !input min_temp
 action:
   - choose:
       - conditions:
