--- a/config/esphome/toilet_light.yaml
+++ b/config/esphome/toilet_light.yaml
@@ -48,6 +48,7 @@ light:
     id: $devicename
     name: $upper_devicename
     output: light_relay
+    restore_mode: ALWAYS_ON
 
 text_sensor:
   - platform: version
