--- a/config/esphome/toilet_light.yaml
+++ b/config/esphome/toilet_light.yaml
@@ -52,5 +52,5 @@ light:
 
 text_sensor:
   - platform: version
-    name: "ESPHome Version"
+    name: "$upper_devicename ESPHome Version"
     hide_timestamp: 'true'
